--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -15,6 +15,10 @@ $product-shadow-color: rgba(0, 0, 0, 0.08);
 $product-green-color: rgba(166, 206, 82, 0.42);
 $product-darkgreen-color: #73962c;
 
+$select-grey: #e2e2e2;
+$select-dark-grey: #515151;
+$select-green: #99c63c;
+
 $filter-color-blue: #2268b4;
 $filter-color-number: #bdbdbe;
 $filter-color-red: #eb5757;
