--- a/scss/components/product/product-media.scss
+++ b/scss/components/product/product-media.scss
@@ -8,6 +8,9 @@
       &__item {
         width: calc(100% / 2 - 15px);
       }
+      &__page {
+        margin: 34px 0 0 0;
+      }
     }
   }
 }
@@ -21,6 +24,24 @@
           img {
             padding: 0 100px;
             transform: scale(1.2);
+          }
+        }
+      }
+
+      &__page {
+        flex-direction: column;
+        align-items: center;
+        #img-page1,
+        #img-page2 {
+          width: 80px;
+        }
+        .pagination {
+          gap: 5px;
+        }
+        &-select {
+          width: 100%;
+          .dropdown button {
+            width: 100%;
           }
         }
       }
